basertppayload: Reject empty caps

https://bugzilla.gnome.org/show_bug.cgi?id=607353